--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-popover": "^1.1.6",
     "@react-router/node": "^7.2.0",
     "@react-router/serve": "^7.2.0",
+    "class-variance-authority": "^0.7.1",
     "isbot": "^5.1.17",
     "react": "^19.0.0",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
-    "react-router": "^7.2.0"
+    "react-icons": "^5.5.0",
+    "react-router": "^7.2.0",
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@react-router/dev": "^7.2.0",
